# BMF_LNS

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: BMF.cpp  BMF.hpp  BMFLocalSearch.cpp  BMFLocalSearch.hpp  CSVMatrixLoader.hpp  DataUtils.hpp  Matrix.hpp  SATSolver.cpp  SATSolver.hpp  main.cpp  verif.py
